--- a/src/index.css
+++ b/src/index.css
@@ -5,25 +5,29 @@
   }
 .layout {
     display: grid;
-    /* gap: 0.5em; */
-    /* height: 100vh; */
-  
+    overflow: hidden;
+    background-size: contain;
     grid-auto-columns: 1fr;
     grid-auto-rows: repeat(7, 1fr);
     grid-template-areas:
       "one one one one one one one"
-      "two four four four four five five"
-      "two four four four four five five"
-      "two four four four four five five";
+      "two four four four four four four"
+      "two four four four four four four"
+      "two four four four four four four";
   }
   .topNavbar {
     grid-area: one;
     height: 63px;
+    background-color: rgba(211, 211, 211, 0.884);
   }
   .sideNavigation {
     grid-area: two;
+    background-color: rgba(211, 211, 211, 0.884);
   }
   
   .mainBox {
     grid-area: four;
+    color: white;
+    background-image: url('./assets/bg.jpg');
+    background-size: contain;
   }
